<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/browserButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/playFile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_audio_file_36" />

    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:contentDescription="@string/playPause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.811"
        app:srcCompat="@drawable/ic_baseline_play_circle_outline_72" />

    <ImageButton
        android:id="@+id/libraryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/playFolder"
        app:layout_constraintStart_toEndOf="@+id/browserButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_library_music_36" />

    <ImageButton
        android:id="@+id/skipNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/skipNext"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintStart_toEndOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        app:srcCompat="@drawable/ic_baseline_skip_next_48" />

    <ImageButton
        android:id="@+id/skipPrevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/skipPrev"
        app:layout_constraintBottom_toBottomOf="@+id/playPauseButton"
        app:layout_constraintEnd_toStartOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton"
        app:srcCompat="@drawable/ic_baseline_skip_previous_48" />

    <ImageButton
        android:id="@+id/repeatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/repeat"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_baseline_repeat_48" />

    <ImageButton
        android:id="@+id/shuffleButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/shuffle"
        app:layout_constraintBottom_toTopOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_baseline_shuffle_48" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:background="@android:drawable/editbox_dropdown_light_frame"
        android:layout_height="0dp"
        android:layout_margin="10sp"
        app:layout_constraintBottom_toTopOf="@+id/shuffleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/libraryButton" />

</androidx.constraintlayout.widget.ConstraintLayout>